Minor changes, fixed links

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
             <div>
                 <a href="/about.html">About</a>
                 <a href="/art.html">Artwork</a>
-                <a href="/reads.html">Reading log</a>
+                <a href="/fursona.html">Fursona</a>
             </div>
         </div>
         <div class="dropdown">
@@ -31,8 +31,7 @@
         <div class="dropdown">
             <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
             <div>
-                <a href="/buttons.html">Button wall</a>
-                <a href="/linkroll.html">Linkroll</a>
+                <a href="https://dungbeetle.neocities.org/" target="_blank">Linkroll</a>
                 <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
             </div>
         </div>
@@ -70,6 +69,8 @@
                 <a href="http://www.dragonflycave.com/quizzes/what-pokemon-are-you"><img src="http://www.dragonflycave.com/wpay/charizard.gif" alt="I am a Charizard!" title="Find out what Pokémon you are at The Cave of Dragonflies"></a>
                 <br><br>
                 <a href='https://clownfredzone.neocities.org/clownquiz.html'><img src='https://clownfredzone.neocities.org/cq/PierrotLarge1.png' alt='I am a Pierrot Mime! Click here to take the clown quiz!'></a>
+                <br><br>
+                <a href="http://dokodemo.neocities.org/gamelounge/splatidol.html"><img src="http://dokodemo.neocities.org/gamelounge/splatoon/shiver.png" alt="Shiver" title="You're most like Shiver from Deep Cut!"></a>
             </div>
             <div>
                 <div style="max-width: 100%; min-width: 100%;background-color: #fff;color: #000;display: block;padding: 10px;border: 1px solid;margin: auto;font-family: 'times';font-size: '15pt';">
@@ -111,6 +112,7 @@
                     <img src="/images/decor/badges/pride.png" alt="Under the Arch">
                     <img src="/images/decor/badges/aro.png" alt="Oh So Aromatic!">
                     <img src="/images/decor/badges/trans.png" alt="Tea Kitten">
+                    <img src="/images/decor/badges/yarr.png" alt="Arr me matey!">
                 </a>
             </marquee>
         </aside>
