--- a/scans.html
+++ b/scans.html
@@ -10,7 +10,7 @@
     <!--NAVIGATION-->
     <nav>
         <h1>Scans</h1>
-        <p>Stuff I scanned, mostly Hazbin Hotel pins. Due to the reflective nature of some of the items, the colors aren't always 100% accurate, even after color correction.</p>
+        <p>Stuff I scanned, mostly manga covers. Due to the reflective nature of some of the items, the colors aren't always 100% accurate, even after color correction.</p>
         <div>
             <a href="#pins"><button style="background-image: url(/images/backgrounds/pinsbutton.png);">Pins</button></a>
             <a href="#covers"><button style="background-image: url(/images/backgrounds/coversbutton.png);">Covers</button></a>
