--- a/art.html
+++ b/art.html
@@ -24,12 +24,13 @@
     <main>
         <!--2023-->
         <h2 id="2023">2023</h2>
+        <a href="https://images2.imgbox.com/d1/36/adz5YDDS_o.png"><img src="https://images2.imgbox.com/d1/36/adz5YDDS_o.png" alt="Alastor and Angel Dust holding each other with text reading «desire» over and over behind them, the artwork is colored almost exclusively with the Baker pride flag colors"></a>
         <a href="https://images2.imgbox.com/0f/36/h2yLbl8T_o.png"><img src="https://images2.imgbox.com/0f/36/h2yLbl8T_o.png" alt="A brown anthropomorphic tapeworm"></a>
         <a href="https://images2.imgbox.com/83/21/wjE2wbVW_o.gif"><img src="https://images2.imgbox.com/83/21/wjE2wbVW_o.gif" alt="Animated icon featuring an anthropomorphic tapeworm" class="pixel"></a>
         <a href="https://images2.imgbox.com/79/a4/Ttg9nnx3_o.png"><img src="https://images2.imgbox.com/79/a4/Ttg9nnx3_o.png" alt="An anthropomorphic dog eating fish and chicken"></a>
         <a href="https://images2.imgbox.com/0f/a2/LVpxdsjF_o.png"><img src="https://images2.imgbox.com/0f/a2/LVpxdsjF_o.png" alt="A brown anthropomorphic tapeworm."></a>
         <a href="https://images2.imgbox.com/a4/c8/TbsivZ69_o.png"><img src="https://images2.imgbox.com/a4/c8/TbsivZ69_o.png" alt="Angel Dust holding Alastor while he's sleeping while they both lay in bed, Angel is also taking a selfie with their phone"></a>
-        <a href="https://images2.imgbox.com/8f/a5/5qzPedfq_o.png"><img src="https://images2.imgbox.com/8f/a5/5qzPedfq_o.png" alt="CW: suggestive" alt="Angel Dust and Alastor being intimate while half-naked with text reading «I could fuck him into a bigger smile» over them"></a>
+        <a href="https://images2.imgbox.com/8f/a5/5qzPedfq_o.png"><img src="https://images2.imgbox.com/8f/a5/5qzPedfq_o.png" alt="Angel Dust and Alastor being intimate while half-naked with text reading «I could fuck him into a bigger smile» over them"></a>
         <a href="https://images2.imgbox.com/46/b2/P60fgpwu_o.png"><img src="https://images2.imgbox.com/46/b2/P60fgpwu_o.png" alt="Alastor and Angel Dust as desktop buddies"></a>
         <a href="https://images2.imgbox.com/8e/e7/3F30vZ8C_o.jpg"><img src="https://images2.imgbox.com/8e/e7/3F30vZ8C_o.jpg" alt="A green tiefling drawn twice over a city at night"></a>
         <a href="https://images2.imgbox.com/f9/d1/Crxscdm6_o.jpg"><img src="https://images2.imgbox.com/f9/d1/Crxscdm6_o.jpg" alt="A dragonborn drawn twice over a city during the day"></a>
