--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div>
                 <a href="/about.html">About</a>
                 <a href="/art.html">Artwork</a>
-                <a href="/reads.html">Reading log</a>
+                <a href="/fursona.html">Fursona</a>
             </div>
         </div>
         <div class="dropdown">
@@ -32,8 +32,7 @@
         <div class="dropdown">
             <button style="background-image: url(/images/backgrounds/button3.png);">Et cetera</button>
             <div>
-                <a href="/buttons.html">Button wall</a>
-                <a href="/linkroll.html">Linkroll</a>
+                <a href="https://dungbeetle.neocities.org/" target="_blank">Linkroll</a>
                 <a href="https://yourdevilfriends.123guestbook.com/" target="_blank">Guestbook</a>
             </div>
         </div>
@@ -50,7 +49,7 @@
             <h2>Obligatory contact information</h2>
             <div>
                 <p>The best way to contact me is through <a href="mailto:heckmaster@protonmail.com">e-mail</a>. I'm additionally really active on Discord, so feel free to ask for my handle there.</p>
-                <p>As for social media, I'm only active on Tumblr (<a href="https://heckmaster.tumblr.com/" target="_blank">main blog</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art blog</a>) and <a href="https://blorbo.social/@yourdevilfriends" target="_blank" rel="me">Mastodon</a>. You may also find me at <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum.</a></p>
+                <p>As for social media, I'm only active on Tumblr (<a href="https://heckmaster.tumblr.com/" target="_blank">main blog</a> & <a href="https://yourdevilfriends.tumblr.com/" target="_blank">art blog</a>) and <a href="https://aethy.com/@yourdevilfriends" target="_blank" rel="me">Mastodon</a>. You may also find me at <a href="https://forum.melonland.net/index.php?action=profile;u=641" target="_blank">MelonLand Forum.</a></p>
             </div>
         </section>
         <!--WEBRINGS-->
